--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.19.0
   supabase_flutter: ^2.0.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
