--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   intl: ^0.19.0
   supabase_flutter: ^2.0.0
   equatable: ^2.0.7
+  onesignal_flutter: ^5.2.9
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
