--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   equatable: ^2.0.7
   onesignal_flutter: ^5.2.9
   dio: ^5.7.0
+  socket_io_client: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
