--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.doctor_app"
     >
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="doctor_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
