--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.10+1
   flutter_bloc: ^8.1.6
-  cloud_firestore: ^4.3.0
+  cloud_firestore: ^5.6.5
   date_format: ^2.0.7
-  firebase_auth: ^4.10.0
-  firebase_core: ^2.12.0
-  firebase_storage: ^11.2.7
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
+  firebase_storage: ^12.4.4
   image_picker: ^1.0.8
   uuid: ^4.5.1
   intl: ^0.19.0
@@ -49,8 +49,9 @@ dependencies:
   equatable: ^2.0.7
   onesignal_flutter: ^5.2.9
   dio: ^5.7.0
-  socket_io_client: ^1.0.2
+  socket_io_client: ^2.0.3 #2.0.3   #3.1.1 #1.0.2
   fl_chart: ^0.70.2
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
