--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   socket_io_client: ^2.0.3 #2.0.3   #3.1.1 #1.0.2
   fl_chart: ^0.70.2
   shared_preferences: ^2.5.3
+  hive: ^2.2.3
+  build_runner: ^2.4.15
 
 
 dev_dependencies:
