--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   fl_chart: ^0.70.2
   shared_preferences: ^2.5.3
   hive: ^2.2.3
+  hive_generator: ^2.0.1
   build_runner: ^2.4.15
 
 
